# hpr

./: .gitignore  Cargo.toml  EXAMPLE.md  LICENSE  Makefile  README.md
src/: app.rs  draw.rs  event.rs  main.rs
src/parser/: blockquote.rs  buffer.rs  codeblock.rs  header.rs  mod.rs
src/render/: blockquote.rs  codeblock.rs  header.rs  horizontal_rule.rs  link.rs  list.rs  mod.rs  modifier.rs  render.rs  typographic.rs
